Implement image loading optimizations and configuration updates
Revamped image loading approach in HauptgrafikSpiel.java by utilizing classLoader over File access. Also, updated configurations present in .idea/artifacts/Info_Projekt_jar.xml and .idea/libraries/lib.xml, cleaned out redundant code and restructured the project. These changes target enhancing code efficiency and promoting easy maintainability.